--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -73,6 +73,7 @@
 </section>
 
 <a href="/artists/{{ artist.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<a href="/artists/{{ artist.id }}/delete"><button class="btn btn-danger btn-lg">delete</button></a>
 
 {% endblock %}
 
