--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -40,12 +40,12 @@
 
         <div class="form-group">
             <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
           </div>
 
           <div class="form-group">
               <label for="seeking_venue">Looking for Venues</label>
-              {{ form.seeking_venue(placeholder='Venue', autofocus = true) }}
+              {{ form.looking_for_venue(placeholder='Venue', autofocus = true) }}
           </div>
 
           <div class="form-group">
