--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -45,12 +45,12 @@
 
        <div class="form-group">
             <label for="website_link">Website Link</label>
-            {{ form.website_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+            {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
        </div>
 
        <div class="form-group">
              <label for="seeking_talent">Looking for Talent</label>
-             {{ form.seeking_talent(placeholder='Venue', autofocus = true) }}
+             {{ form.looking_for_talent(placeholder='Venue', autofocus = true) }}
        </div>
 
        <div class="form-group">
